tests/NormalTests/paczka2/big_fuzzy/25253060.err
Error in line 1: yNWu A580 33,9
Error in line 9: 3llV A25 97,
Error in line 11: yNWu A580 112,6
Error in line 10: 3llV A285 382,4
Error in line 19: f5zAga A118 60,9
Error in line 18: A580 A118 12,6
Error in line 51: yNWu A26\ 57,9
Error in line 57: yNWu A118 9,2
Error in line 50: 43Z6Xc A580 20,4
Error in line 43: f5zAga A260 183,0
Error in line 58: yNWu A580 1,0
Error in line 88: yNWu A260 21,7
Error in line 90: yNWu A580 13,8
Error in line 96: 43Z6Xc A260 23,5
Error in line 103: A580 A580 74,5
Error in line 110: A580 A580 67,2
Error in line 106: f5zAga A580 11,4
Error in line 120: hWwLhVvu7 A580 C2,C
Error in line 123: hWwLhVvu7 A118 52,7
Error in line 114: A580 A118 9,5
Error in line 145: A580 A580 53,1
Error in line 144: 3llV A580 95,7
Error in line 147: 3llV A260 66,0
Error in line 153: A580 A260 201,2
Error in line 159: hWwLhVvu7 A285 75,7
Error in line 169: hWwLhVvu7 A118 55,3
Error in line 175: 43Z6Xc A260 18,29
Error in line 180: yNWu A118 6,5
Error in line 174: f5zAga A260 23,0
Error in line 187: 43Z6Xc A260 27,2
Error in line 184: yNWu A580 34,4
Error in line 200: 3llV A118 21,04
Error in line 195: hWwLhVvu7 A580 78,8
Error in line 191: 3llV A285 64,8
Error in line 202: 3llV A118 77,3
Error in line 204: 3llV A260 -4,2
Error in line 201: hWwLhVvu7 A118 38,5
Error in line 214: bSjz7emC A580 6,1
Error in line 203: 3llV A260 95,5
Error in line 221: f5zAga A580 38,5
Error in line 233: bSjz7emC A285 91,8
Error in line 235: 43Z6Xc A118 70,0
